test/expected/cast_type_i.out
cast x into type int
         ^
10: syntax error: "typedef": "as", "into", or "to" expected ("typedef" is a keyword)
